Updated changes for layouts

--- a/product.html
+++ b/product.html
@@ -188,6 +188,14 @@
             </a>
         </div>
 
+        <!-- Add Navigation Links for Small Screens Only -->
+        <div class="flex flex-col items-center gap-3 mt-5 text-sm md:hidden">
+            <!-- Hidden on Medium and Larger Screens -->
+            <a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a>
+            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
+            <a href="product.html" class="hover:text-yellow-300 transition duration-300">Products</a>
+        </div>
+
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
     </section>
 </body>
