--- a/index.html
+++ b/index.html
@@ -99,43 +99,45 @@
             <img src="plant pot.png" alt="Header-image" class="w-60">
         </div>
     </section>
-    <!--About Us Secrion-->
-    <section class="text-center">
-        <h1 class="text-3xl font-bold mt-5">About Us</h1>
-        <p>This site is for those who admire the beauty and harmony of nature.</p>
+    <!--About Us Section-->
+    <section class="bg-gray-100 p-6 text-center">
+        <h1 class="text-3xl font-bold mt-5 text-gray-800">About Us</h1>
+        <p class="text-gray-600 mt-3">This site is for those who admire the beauty and harmony of nature.</p>
 
-        <div class="md:flex flex-wrap justify-around mt-6">
-            <div class="border border-black p-4 m-6 rounded-lg w-full max-w-xs mx-auto flex-1">
+        <div class="md:flex flex-wrap justify-around mt-8">
+            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-10 mx-auto mb-4">
+                    stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
                 </svg>
-                <h2 class="text-xl font-medium">Large Assortment</h2>
-                <p class="text-justify p-2">Discover a world of greenery! From classic houseplants to unique botanical
-                    treasures, we have something to suit every taste and space.</p>
+                <h2 class="text-xl font-semibold text-gray-700">Large Assortment</h2>
+                <p class="text-justify text-gray-500 mt-2">Discover a world of greenery! From classic houseplants to
+                    unique
+                    botanical treasures, we have something to suit every taste and space.</p>
             </div>
 
-            <div class="border border-black p-4 m-6 rounded-lg w-full max-w-xs mx-auto flex-1">
+            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-10 mx-auto mb-4">
+                    stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M19.5 12c0-1.232-.046-2.453-.138-3.662a4.006 4.006 0 0 0-3.7-3.7 48.678 48.678 0 0 0-7.324 0 4.006 4.006 0 0 0-3.7 3.7c-.017.22-.032.441-.046.662M19.5 12l3-3m-3 3-3-3m-12 3c0 1.232.046 2.453.138 3.662a4.006 4.006 0 0 0 3.7 3.7 48.656 48.656 0 0 0 7.324 0 4.006 4.006 0 0 0 3.7-3.7c.017-.22.032-.441.046-.662M4.5 12l3 3m-3-3-3 3" />
                 </svg>
-                <h2 class="text-xl font-medium">Free and Fast Shipping</h2>
-                <p class="text-justify p-2">Experience the joy of plant ownership with free and fast shipping. Find the
-                    perfect plant to enhance your space.</p>
+                <h2 class="text-xl font-semibold text-gray-700">Free and Fast Shipping</h2>
+                <p class="text-justify text-gray-500 mt-2">Experience the joy of plant ownership with free and fast
+                    shipping. Find the perfect plant to enhance your space.</p>
             </div>
 
-            <div class="border border-black p-4 m-6 rounded-lg w-full max-w-xs mx-auto flex-1">
+            <div class="bg-white border border-gray-200 p-6 m-6 rounded-lg w-full max-w-xs mx-auto flex-1 shadow-md">
                 <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
-                    stroke="currentColor" class="w-10 mx-auto mb-4">
+                    stroke="currentColor" class="w-12 mx-auto mb-4 text-green-600">
                     <path stroke-linecap="round" stroke-linejoin="round"
                         d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
                 </svg>
-                <h2 class="text-xl font-medium">24/7 Support</h2>
-                <p class="text-justify p-2">Get expert assistance anytime! Our team is available 24/7 to help you choose
-                    the perfect plants.</p>
+                <h2 class="text-xl font-semibold text-gray-700">24/7 Support</h2>
+                <p class="text-justify text-gray-500 mt-2">Get expert assistance anytime! Our team is available 24/7 to
+                    help
+                    you choose the perfect plants.</p>
             </div>
         </div>
     </section>
@@ -145,25 +147,25 @@
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
             <div class="transition-all duration-300 ease-in-out hover:scale-105">
                 <img src="best seller 1.jpg" alt="Best Seller 1 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-lg transition-all duration-500 ease-in-out">
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
                 <h1 class="mt-2 font-semibold">Rose Plant</h1>
                 <p class="text-green-600 font-medium">BHD 8.00</p>
             </div>
             <div class="transition-all duration-300 ease-in-out hover:scale-105">
                 <img src="best seller 2.jpg" alt="Best Seller 2 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-lg transition-all duration-500 ease-in-out">
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
                 <h1 class="mt-2 font-semibold">Lily Plant</h1>
                 <p class="text-green-600 font-medium">BHD 5.00</p>
             </div>
             <div class="transition-all duration-300 ease-in-out hover:scale-105">
                 <img src="best seller 3.jpg" alt="Best Seller 3 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-lg transition-all duration-500 ease-in-out">
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
                 <h1 class="mt-2 font-semibold">Jasmine Plant</h1>
                 <p class="text-green-600 font-medium">BHD 8.50</p>
             </div>
             <div class="transition-all duration-300 ease-in-out hover:scale-105">
                 <img src="best seller 4.jpg" alt="Best Seller 4 image"
-                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-lg transition-all duration-500 ease-in-out">
+                    class="inline hover:shadow-xl transform hover:-translate-y-2 rounded-2xl transition-all duration-500 ease-in-out cursor-pointer">
                 <h1 class="mt-2 font-semibold">Lavender Plant</h1>
                 <p class="text-green-600 font-medium">BHD 10.00</p>
             </div>
@@ -172,28 +174,24 @@
     <!--Customer Reviews-->
     <section>
         <h1 class="text-3xl font-bold mt-5 text-center">Customer Reviews</h1>
-        <div class="flex flex-col gap-5 justify-center text-white m-5">
+        <div class="grid gap-5 justify-center text-white m-5">
             <div
-                class="bg-gradient-to-r from-green-800 to-green-600 p-5 container rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
+                class="bg-gradient-to-r from-green-800 to-green-600 p-5 rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
                 <p class="italic">"I recently purchased a Peace Lily from Greenden and it arrived in perfect condition.
                     The plant is healthy and vibrant, and it's already starting to bloom. I'm very happy with my
                     purchase!"</p>
                 <p class="font-bold text-yellow-300 mt-3">Mahendra Singh Dhoni</p>
                 <p class="text-yellow-400">4.1 ⭐⭐⭐⭐</p>
             </div>
-        </div>
-        <div class="flex justify-center text-white m-5">
             <div
-                class="bg-gradient-to-r from-green-800 to-green-600 p-5 container rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
+                class="bg-gradient-to-r from-green-800 to-green-600 p-5 rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
                 <p class="italic">"I recently got a Fiddle Leaf Fig from Greenden and it's stunning! It arrived healthy
                     and well-packaged. I'm so happy with it!"</p>
                 <p class="font-bold text-yellow-300 mt-3">Joseph Vijay</p>
                 <p class="text-yellow-400">4.4 ⭐⭐⭐⭐</p>
             </div>
-        </div>
-        <div class="flex justify-center text-white m-5">
             <div
-                class="bg-gradient-to-r from-green-800 to-green-600 p-5 container rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
+                class="bg-gradient-to-r from-green-800 to-green-600 p-5 rounded-lg shadow-lg hover:shadow-2xl transition-shadow duration-300 ease-in-out">
                 <p class="italic">"I bought a tiny Spider Plant from Greenden and it's the cutest little thing! It's
                     healthy and growing well, and it's adding a touch of green to my space. I love it!"</p>
                 <p class="font-bold text-yellow-300 mt-3">Ryan Reynolds</p>
@@ -235,6 +233,14 @@
             <a href="#" class="hover:text-yellow-300 transition duration-300">
                 <i class="fab fa-linkedin fa-2x"></i>
             </a>
+        </div>
+
+        <!-- Add Navigation Links for Small Screens Only -->
+        <div class="flex flex-col items-center gap-3 mt-5 text-sm md:hidden">
+            <!-- Hidden on Medium and Larger Screens -->
+            <a href="index.html" class="hover:text-yellow-300 transition duration-300">Home</a>
+            <a href="contact.html" class="hover:text-yellow-300 transition duration-300">Contact Us</a>
+            <a href="product.html" class="hover:text-yellow-300 transition duration-300">Products</a>
         </div>
 
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
