--- a/product.html
+++ b/product.html
@@ -85,10 +85,10 @@
     <section class="p-4 text-center">
         <h1 class="font-bold mt-5 text-3xl">Our Products</h1>
 
-        <!-- Search Input -->
+        <!-- Search Input (inside header) -->
         <input type="text"
             class="border border-gray-300 rounded-full p-3 m-3 shadow-md focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-300"
-            style="width: 80%;" placeholder="Search for a Product...">
+            style="width: 45%; position: sticky; top: 0; z-index: 20;" placeholder="Search for a Product...">
 
         <!-- Product Grid -->
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
