--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
 <body>
     <!-- Responsive Navbar -->
     <nav class="p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
-        <h1 class="text-2xl font-bold text-white">Greenden</h1>
+        <h1 class="md:text-2xl font-bold text-white sm:text-xl">Greenden</h1>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-5 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -146,10 +146,10 @@
                                         Technical support
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        support@example.com
+                                        Greenden@gmail.com
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        +1 234-567-89
+                                        +973 234-567-89
                                     </p>
                                 </div>
                             </div>
@@ -170,10 +170,10 @@
                                         Sales questions
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        sales@example.com
+                                        salesgreenden@gmail.com
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        +1 234-567-89
+                                        +973 234-567-83
                                     </p>
                                 </div>
                             </div>
@@ -192,10 +192,10 @@
                                 <div class="ml-6 grow">
                                     <p class="mb-2 font-bold ">Press</p>
                                     <p class="text-neutral-500 ">
-                                        press@example.com
+                                        pressgreen@gmail.com
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        +1 234-567-89
+                                        +973 234-567-86
                                     </p>
                                 </div>
                             </div>
@@ -216,10 +216,10 @@
                                         Bug report
                                     </p>
                                     <p class="text-neutral-500 ">
-                                        bugs@example.com
+                                        bugsgdn@gamil.com
                                     </p>
                                     <p class="text-neutral-500">
-                                        +1 234-567-89
+                                        +973 234-567-81
                                     </p>
                                 </div>
                             </div>
