--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <body>
     <!-- Responsive Navbar -->
     <nav class="p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
-        <h1 class="text-2xl font-bold text-white">Greenden</h1>
+        <h1 class="md:text-2xl font-bold text-white sm:text-xl">Greenden</h1>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-5 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -81,7 +81,6 @@
             </li>
         </ul>
     </nav>
-
     <!-- Header Section -->
     <section class="bg-green-200 p-4 md:p-10 flex justify-center">
         <div>
