--- a/product.html
+++ b/product.html
@@ -63,7 +63,7 @@
 <body>
     <!-- Responsive Navbar -->
     <nav class="p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
-        <h1 class="text-2xl font-bold text-white">Greenden</h1>
+        <h1 class="md:text-2xl font-bold text-white sm:text-xl">Greenden</h1>
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
             class="w-6 h-5 md:hidden">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
@@ -88,7 +88,7 @@
         <!-- Search Input (inside header) -->
         <input type="text"
             class="border border-gray-300 rounded-full p-3 m-3 shadow-md focus:outline-none focus:ring-2 focus:ring-green-500 transition duration-300"
-            style="width: 45%; position: sticky; top: 0; z-index: 20;" placeholder="Search for a Product...">
+            style="width: 45%; position: sticky; top: 0; z-index: 20;"placeholder="Search for a Product...">
 
         <!-- Product Grid -->
         <div class="grid grid-cols-2 md:grid-cols-4 mt-5 gap-5">
