Updated nav bar changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(4, 146, 149) 0%, rgb(240, 167, 9) 100%);
         }
 
         footer {
@@ -102,9 +102,9 @@
     </section>
     <!-- About Us Section -->
     <section
-        class="bg-gradient-to-r from-green-200 via-green-300 to-green-500 p-6 text-center rounded-xl shadow-lg mt-10 mb-7">
+        class="bg-green-300 p-6 text-center rounded-xl shadow-lg mt-10 mb-7">
         <h1 class="text-4xl font-extrabold mt-5 text-green-900 tracking-wide">About Us</h1>
-        <p class="text-green-800 mt-3">This site is for those who admire the beauty and harmony of nature.
+        <p class="text-green-800 font-bold mt-3">This site is for those who admire the beauty and harmony of nature.
         </p>
 
         <div class="md:flex flex-wrap justify-around mt-10 gap-6">
