--- a/product.html
+++ b/product.html
@@ -15,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(4, 146, 149) 0%, rgb(240, 167, 9) 100%);
         }
 
         footer {
