--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <style>
         /* Header and Footer Styling */
         nav {
-            background: linear-gradient(90deg, rgb(11, 185, 188) 0%, rgba(253, 187, 45, 1) 100%);
+            background: linear-gradient(90deg, rgb(4, 146, 149) 0%, rgb(240, 167, 9) 100%);
         }
 
         footer {
@@ -102,24 +102,24 @@
                         <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Name
                         </label>
-                        <input type="text" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
-                            placeholder="Name" />
+                        <input type="text" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md"
+                            id="exampleInput90" placeholder="Name" />
                     </div>
 
                     <div class="mb-3 w-full">
                         <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Email
                         </label>
-                        <input type="email" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md" id="exampleInput90"
-                            placeholder="Enter your email address" />
+                        <input type="email" class="text-green-700 px-2 py-2 border w-full outline-none rounded-md"
+                            id="exampleInput90" placeholder="Enter your email address" />
                     </div>
 
                     <div class="mb-3 w-full">
                         <label class="block font-medium mb-[2px] text-green-700" htmlFor="exampleInput90">
                             Message
                         </label>
-                        <textarea class="text-green-700 px-2 py-2 border rounded-[5px] w-full outline-none" name="" id=""
-                            placeholder="Your Message..."></textarea>
+                        <textarea class="text-green-700 px-2 py-2 border rounded-[5px] w-full outline-none" name=""
+                            id="" placeholder="Your Message..."></textarea>
                     </div>
 
                     <button type="submit"
