--- a/index.html
+++ b/index.html
@@ -65,10 +65,9 @@
     <!-- Responsive Navbar -->
     <nav class="p-3 flex items-center justify-between shadow-xl sticky top-0 z-10">
         <h1 class="md:text-2xl font-bold text-white sm:text-xl">Greenden</h1>
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor"
-            class="w-6 h-5 md:hidden">
+        <svg id="menuicon" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-6 h-5 md:hidden cursor-pointer">
             <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
-        </svg>
+        </svg>        
         <ul class="flex gap-5 text-grey-600 hidden md:flex">
             <li>
                 <a class="text-green-950 hover:underline hover:text-white" href="index.html">Home</a>
@@ -81,6 +80,23 @@
             </li>
         </ul>
     </nav>
+    <!-- Side nav bar -->
+    <section id="sidenav" class="bg-gradient-to-r from-green-200 to-green-400 fixed z-20 top-0 transition-all duration-1000" style="width: 30%; height: 100vh; right: -30%;">
+        <div class="text-right p-5">
+            <p id="closenav" class="inline cursor-pointer">X</p>
+        </div>
+        <ul class="flex flex-col gap-10 items-center text-green-800">
+            <li>
+                <a class="text-green-950 hover:underline hover:text-white" href="index.html">Home</a>
+            </li>
+            <li>
+                <a class="text-green-950 hover:underline hover:text-white" href="product.html">Products</a>
+            </li>
+            <li>
+                <a class="text-green-950 hover:underline hover:text-white" href="contact.html">Contact Us</a>
+            </li>
+        </ul>
+    </section>
     <!-- Header Section -->
     <section class="bg-green-100 p-4 md:p-10 flex justify-center">
         <div>
@@ -261,6 +277,7 @@
 
         <p class="text-sm mt-3">© 2024 Greenday.com. All rights reserved.</p>
     </section>
+    <script src="script.js"></script>
 </body>
 
 </html>
